# cyniphile.github.io

./: 404.html  CNAME  README.md  archives.html  authors.html  first-post.html  index.html  pelicanconf.py  publishconf.py  pyproject.toml  sitemap.xml  tags.html
author/: vik-paruchuri.html
category/: posts.html
content/: Test Post.ipynb
css/: style.css
feeds/: all.atom.xml
img/: frontpage.xcf  frontpage_responsive.xcf
output/: archives.html  authors.html  categories.html  first-post.html  index.html  tags.html
output/author/: vik-paruchuri.html
output/category/: posts.html
output/feeds/: all.atom.xml  posts.atom.xml
output/tag/: python-firsts.html
tag/: python-firsts.html
