[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pelican = "^4.0"
jupyter = "^1.0"
ipython = "^7.2"
matplotlib = "^3.0"
markdown = "^3.0"
beautifulsoup4 = "^4.7"
nbconvert = "^5.4"
ghp-import = "^0.5.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
